--- a/Desktop/웹/시작.html
+++ b/Desktop/웹/시작.html
@@ -11,27 +11,20 @@
                 <div class="header">
                     <div class="title">
                         <h1><a href="home.html"> WINDO's homepage</a></h1>
-                       </div> 
+                    </div> 
                     <ul class="nav">
                         <li><a href="intro">/ INTRODUTION</a></li>
                         <li><a href="diary">/ DIARY</li></a>
                         <li><a href="picture">/ PICTURE</li></a>
                         <li><a href="design">/ DESIGN</li></a>
                         <li><a href="etc">/ etc</li></a>
-                    </ul>                                                       
+                    </ul>                                               
                 </div>
+                <div class="searcharea">
+                    <input type="text" placeholder="검색어 입력">
+                    <button>검색</button>
+                </div>                          
             </div>    
-        </div> 
-        <div>
-            <ul id="contants">
-                <p>안녕하세요 저의 개인 홈페이지에 오신것을환영합니다<br>
-                    아직은 아무것도 없으니까<br> 
-                    그냥 나가세요
-                    <a href="error.html">
-                        <img src="C:\Users\CKIRUser\Desktop\웹\image\door.png" alt="나가는 문"  >
-                    </a>
-                </p>
-            </ul>  
         </div> 
     </body>
 </html>
